ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yages
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: yages-tls
      hosts:
        - yages.example.com
  rules:
    - host: yages.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yages
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: yages
spec:
  selector:
    app: yages
  ports:
    - name: grpc
      appProtocol: grpc
      protocol: TCP
      port: 80
      targetPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yages
  labels:
    app: yages
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yages
  template:
    metadata:
      labels:
        app: yages
    spec:
      containers:
        - name: yages
          image: jchenship/yages:0.1.0
          ports:
            - containerPort: 9000
